[tool.poetry]
name = "python-algorithms"
version = "0.1.0"
description = ""
authors = ["duyixian <duyixian1234@qq.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
mypy = "^0.790"
black = "^20.8b1"
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
